--- a/Clash/Config/Clash-Basic.yaml
+++ b/Clash/Config/Clash-Basic.yaml
@@ -74,9 +74,7 @@ dns:
 c: &c {type: http, behavior: classical, interval: 86400}
 # 规则行为锚点
 
-dm: &dm {type: http, behavior: domain, interval: 86400}
-
-ip: &ip {type: http, behavior: ipcidr, interval: 86400}
+d: &d {type: http, behavior: domain, interval: 86400}
 
 p: &p {type: http, interval: 42300, health-check: {enable: true, url: http://cp.cloudflare.com/generate_204, interval: 300}}
 # 代理提供商锚点
@@ -148,7 +146,7 @@ rule-providers: # 远程规则集
     path: ./ruleset/BiliBili.yaml
 
   GlobalMedia: # 国际媒体
-    <<: *dm
+    <<: *d
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Domain.yaml"
     path: ./ruleset/GlobalMedia.yaml
 
@@ -168,7 +166,7 @@ rule-providers: # 远程规则集
     path: ./ruleset/TestFlight.yaml
 
   Apple: # 苹果服务
-    <<: *dm
+    <<: *d
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Domain.yaml"
     path: ./ruleset/Apple.yaml
 
@@ -178,12 +176,12 @@ rule-providers: # 远程规则集
     path: ./ruleset/Microsoft.yaml
 
   ChinaMax_Domain: # 国内网站
-    <<: *dm
+    <<: *d
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax_Domain.yaml"
     path: ./ruleset/ChinaMax_Domain.yaml
 
   Global_Domain: # 国外网站
-    <<: *dm
+    <<: *d
     url: "https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.yaml"
     path: ./ruleset/Global_Domain.yaml
 
