--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,7 +1,7 @@
 # > Loon Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.01
+# > Update Date: 2023.05.03
 
 ############################################################################
 # > SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -138,7 +138,7 @@ SSIDPolicy = ssid, default = AutoSelect , cellular = AutoSelect, "Coldvvater"= D
 # > 国外网站
 Global = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
-Domestic = select,DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
+Mainland = select,DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
 # > 油管视频
 YouTube = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/YouTube.png
 # > 奈飞视频
@@ -234,7 +234,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # > 游戏平台
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list, policy=Games, tag=Games, enabled=true
 # > 国内网站分流
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list, policy=Domestic, tag=Domestic, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list, policy=Mainland, tag=Mainland, enabled=true
 # > 国外网站分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list, policy=Foreign, tag=Global, enabled=true
 # > LAN
