--- a/Loon/Config/Loon-Lite.conf
+++ b/Loon/Config/Loon-Lite.conf
@@ -1,7 +1,7 @@
 # > Loon Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.01
+# > Update Date: 2023.05.03
 
 [General]
 # > IPv6 支持
@@ -129,9 +129,9 @@ Auto = url-test,url = http://cp.cloudflare.com/generate_204,interval = 300,img-u
 # > 故障转移
 Fallback = fallback,url = http://cp.cloudflare.com/generate_204,interval = 300,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
 # > 国外网站
-Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
+Global = select,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,DIRECT,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
-Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
+Mainland = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
 # > 哔哩哔哩
 BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Japan,Singapore,America,Others,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/bilibili.png
 # > 声田音乐
@@ -203,7 +203,7 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, polic
 # > 微软分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
 # > 国内网站分流
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=Domestic, tag=Domestic, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=Mainland, tag=Mainland, enabled=true
 # > LAN
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy=DIRECT, tag=LAN, enabled=true
 # > GEOIP CN
