--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.01
+# > Update Date: 2023.05.03
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -124,7 +124,7 @@ available=Fallback, server-tag-regex=.*, img-url=https://raw.githubusercontent.c
 # > 国外网站
 static=Global, Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
-static=Domestic, direct, Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
+static=Mainland, direct, Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
 # > 油管视频
 static=YouTube, Select, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/YouTube.png
 # > 奈飞视频
@@ -206,7 +206,7 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 # > 游戏平台
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list, tag=Game, force-policy=Games, update-interval=172800, opt-parser=true, enabled=true
 # > 国内网站
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list, tag=Domestic, force-policy=Domestic, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list, tag=Mainland, force-policy=Mainland, update-interval=172800, opt-parser=true, enabled=true
 # > 国外网站
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, tag=Global, force-policy=Global, update-interval=172800, opt-parser=true, enabled=true
 FILTER_LAN, tag = LAN, force-policy = direct, enabled = true
