--- a/QuantumultX/Config/QuantumultX-Lite.conf
+++ b/QuantumultX/Config/QuantumultX-Lite.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.01
+# > Update Date: 2023.05.03
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -117,9 +117,9 @@ url-latency-benchmark= Auto, server-tag-regex=.*, check-interval=600, tolerance=
 # > 故障转移
 available=Fallback, server-tag-regex=.*, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Available.png
 # > 国外网站
-static=Foreign, Select, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
+static=Global, Select, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/Global.png
 # > 国内网站
-static=Domestic, direct, Select, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
+static=Mainland, direct, Select, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/China_Map.png
 # > 哔哩哔哩
 static=BiliBili, direct, Select, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/mini/bilibili.png
 # > 声田音乐
@@ -173,13 +173,13 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, 
 # > 电报信息
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false, enabled=true
 # > 国外网站
-https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, tag=Foreign, force-policy=Foreign, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, tag=Foreign, force-policy=Global, update-interval=172800, opt-parser=true, enabled=true
 # > 苹果服务
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list, tag=Apple, force-policy=Apple, update-interval=172800, opt-parser=true, enabled=true
 # > 微软服务
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Microsoft/Microsoft.list, tag=Microsoft, force-policy=Microsoft, update-interval=172800, opt-parser=false, enabled=true
 # > 国内网站
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, tag=Domestic, force-policy=Domestic, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, tag=Domestic, force-policy=Mainland, update-interval=172800, opt-parser=true, enabled=true
 # > ASN China
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, tag=ASN-China, force-policy=direct, update-interval=172800, opt-parser=true, enabled=false
 
