--- a/Shadowrocket/Config/Shadowrocket-Evolve.conf
+++ b/Shadowrocket/Config/Shadowrocket-Evolve.conf
@@ -1,7 +1,7 @@
 # > Shadowrocket Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.02
+# > Update Date: 2023.05.03
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -64,7 +64,7 @@ Fallback = fallback,url=http://cp.cloudflare.com/generate_204,interval=600,toler
 # > 国外网站
 Global = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 国内网站
-Domestic = select,DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
+Mainland = select,DIRECT,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 油管视频
 YouTube = select,Proxy,AutoSelect,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 奈飞视频
@@ -159,7 +159,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games
 
 # > 国内网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Domestic
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Mainland
 
 # > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global
