--- a/Shadowrocket/Config/Shadowrocket-Lite.conf
+++ b/Shadowrocket/Config/Shadowrocket-Lite.conf
@@ -62,9 +62,9 @@ Auto = url-test,url=http://cp.cloudflare.com/generate_204,interval=600,tolerance
 # > 故障转移
 Fallback = fallback,url=http://cp.cloudflare.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=.*
 # > 国外网站
-Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
+Global = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,,Others,DIRECT,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 国内网站
-Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
+Mainland = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=1,url=http://cp.cloudflare.com/generate_204
 # > 哔哩哔哩
 BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,interval=600,timeout=5,select=0,url=http://cp.cloudflare.com/generate_204
 # > 声田音乐
@@ -124,7 +124,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMed
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,Telegram
 
 # > 国外网站分流
-RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Foreign
+RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Global
 
 # > Apple分流
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple
@@ -133,7 +133,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.li
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,Microsoft
 
 # > 国内网站分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Mainland
 
 # > 局域网
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT
