--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surfboard Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.02
+# > Update Date: 2023.05.03
 
 # 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -139,7 +139,7 @@ Fallback = fallback, policy-path=[此处填入订阅链接], url=http://cp.cloud
 # > 国外网站
 Global = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Domestic = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Mainland = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 油管视频
 YouTube = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 奈飞视频
@@ -235,7 +235,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Game/Game.list,Games,update-interval=86400
 
 # > 国内网站
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Domestic,update-interval=86400
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaMax/ChinaMax_Domain.list,Mainland,update-interval=86400
 
 # > 国外网站
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Global/Global_Domain.list,Global,update-interval=86400
