--- a/Surfboard/Config/Surfboard-Lite.conf
+++ b/Surfboard/Config/Surfboard-Lite.conf
@@ -126,6 +126,7 @@ DIRECT = direct
 # trojan proxy, trojan grpc is not supported
 #ProxyTrojan = trojan, 192.168.20.6, 443, password=password1, udp-relay=false, skip-cert-verify=true, sni=www.google.com
 
+
 [Proxy Group]
 # > 代理策略组
 # > 漏网之鱼
@@ -137,9 +138,9 @@ Auto = url-test, policy-path=[此处填入订阅链接], url=http://cp.cloudflar
 # > 故障转移
 Fallback = fallback, policy-path=[此处填入订阅链接], url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, 
 # > 国外网站
-Foreign = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
+Global = select,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others,DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Domestic = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
+Mainland = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 哔哩哔哩
 BiliBili = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 声田音乐
@@ -156,8 +157,6 @@ Apple = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,Americ
 Microsoft = select,DIRECT,Proxy,Auto,Fallback,HongKong,TaiWan,Singapore,Japan,America,Others, no-alert=0, hidden=0
 # > 广告拦截
 AdBlock = select, REJECT,DIRECT, no-alert=0, hidden=0, include-all-proxies=0
-
-# > 外部节点(在此替换您的订阅链接)
 # > 香港节点
 HongKong = select, policy-path=[此处填入订阅链接], policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600,update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
 # > 台湾节点
@@ -201,7 +200,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMed
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram,update-interval=86400
 
 # > 国外网站分流
-RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Foreign,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Global,update-interval=86400
 
 # > Apple分流
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple,update-interval=86400
@@ -210,7 +209,7 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.li
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft,update-interval=86400
 
 # > 国内网站分流
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic,update-interval=86400
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Mainland,update-interval=86400
 # > 本地规则分流
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
@@ -226,3 +225,4 @@ FINAL,Final
 
 [Panel]
 #PanelA = title="Panel Title", content="Panel Content\nSecondLine", style=info
+
