--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.05.03
+# > Update Date: 2023.05.04
 
 ############################################################################
 # > 新增的SSID策略组里 “Coldvvater” 和 “Coldvvater_5G” 为WiFi的SSID名称示例，
@@ -126,59 +126,59 @@ keyword-filter-type = false
 # > 漏网之鱼
 Final = select, Proxy, DIRECT, no-alert=0, hidden=0, include-all-proxies=0
 # > 节点切换
-Proxy = select, AutoSelect, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
+Proxy = select, Auto, Fallback, SSIDPolicy, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0, include-all-proxies=0
 # > 自动选择
-AutoSelect = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
+Auto = url-test, policy-path=此处填写订阅链接, url=http://cp.cloudflare.com/generate_204, interval=300, update-interval=86400, tolerance=50
 # > 故障转移
-Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="AutoSelect"
+Fallback = fallback, url=http://cp.cloudflare.com/generate_204, interval=180, update-interval=86400, include-other-group="Auto"
 # > SSID策略
-SSIDPolicy = subnet, default = AutoSelect, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
+SSIDPolicy = subnet, default = Auto, "Coldvvater" = DIRECT, "Coldvvater_5G" = DIRECT
 # > 国外网站
-Global = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Global = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国内网站
-Mainland = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Mainland = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 油管视频
-YouTube = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+YouTube = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 奈飞视频
-NETFLIX = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+NETFLIX = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 迪士尼+
-Disney+ = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Disney+ = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > Emby
-Emby = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Emby = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 哔哩哔哩
-BiliBili = select, DIRECT, HongKong, TaiWan, Others, no-alert=0, hidden=0
+BiliBili = select, DIRECT, HongKong, TaiWan, no-alert=0, hidden=0
 # > 声田音乐
-Spotify = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Spotify = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 网易云音乐
-NetEaseMusic = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+NetEaseMusic = select, DIRECT, no-alert=0, hidden=0
 # > 海外抖音
-TikTok = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+TikTok = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 国际媒体
-Streaming = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Streaming = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 电报信息
-Telegram = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Telegram = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 苹果服务
-Apple = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Apple = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 谷歌服务
-Google = select, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
+Google = select, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, DIRECT, no-alert=0, hidden=0
 # > 微软服务
-Microsoft = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Microsoft = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 游戏平台
-Games = select, DIRECT, Proxy, AutoSelect, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
+Games = select, DIRECT, Proxy, Auto, Fallback, HongKong, TaiWan, Singapore, Japan, America, Others, no-alert=0, hidden=0
 # > 广告拦截
 AdBlock = select, REJECT, DIRECT, no-alert=0, hidden=0
 # > 香港节点
-HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+HongKong = select, policy-regex-filter=港|🇭🇰|香港|HK|Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 台湾节点
-TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+TaiWan = select, policy-regex-filter=台|🇹🇼|台湾|TW|Tai, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 狮城节点
-Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+Singapore = select, policy-regex-filter=坡|🇸🇬|新加坡|狮城|SG|Singapore, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 日本节点
-Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+Japan = select, policy-regex-filter=日|🇯🇵|日本|JP|Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 美国节点
-America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+America = select, policy-regex-filter=美|🇺🇲|美国|US|States|American, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 # > 其他节点
-Others = select, DIRECT, policy-regex-filter=.*, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="AutoSelect"
+Others = select, DIRECT, policy-regex-filter=.*, interval=600, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0, include-other-group="Auto"
 
 [Rule]
 # > 规则修正
